fix[styles] fix navbar brand vertical align

--- a/frontend/src/app/navigation/components/navbar/navbar.component.scss
+++ b/frontend/src/app/navigation/components/navbar/navbar.component.scss
@@ -13,6 +13,10 @@
     font-family: 'Yesteryear', cursive;
     color: $color-text-lightest;
     font-size: 3rem;
+
+    .logo {
+      vertical-align: middle;
+    }
   }
 
   .navbar-nav > li > a {
